// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`icons/general/IconInformation should correctly render default icon 1`] = `
<AccessibleSVG
  className="icon-information "
  height={13}
  viewBox="0 0 5 13"
  width={5}
>
  <g
    className="fill-color"
    fill="#444"
  >
    <path
      d="M1 12h3V6H1v6zm0-7h3c.6 0 1 .5 1 1v6c0 .6-.4 1-1 1H1c-.6 0-1-.5-1-1V6c0-.6.4-1 1-1zM2 3h1c.6 0 1-.4 1-1s-.4-1-1-1H2c-.6 0-1 .4-1 1s.4 1 1 1zm0-3h1c1.1 0 2 .9 2 2s-.9 2-2 2H2C.9 4 0 3.1 0 2s.9-2 2-2z"
    />
  </g>
</AccessibleSVG>
`;

exports[`icons/general/IconInformation should correctly render icon with specified props 1`] = `
<AccessibleSVG
  className="icon-information test"
  height={150}
  title="title"
  viewBox="0 0 5 13"
  width={160}
>
  <g
    className="fill-color"
    fill="#000"
  >
    <path
      d="M1 12h3V6H1v6zm0-7h3c.6 0 1 .5 1 1v6c0 .6-.4 1-1 1H1c-.6 0-1-.5-1-1V6c0-.6.4-1 1-1zM2 3h1c.6 0 1-.4 1-1s-.4-1-1-1H2c-.6 0-1 .4-1 1s.4 1 1 1zm0-3h1c1.1 0 2 .9 2 2s-.9 2-2 2H2C.9 4 0 3.1 0 2s.9-2 2-2z"
    />
  </g>
</AccessibleSVG>
`;
